@startuml CLASS_DIAGRAM_STANDARD_UML_V2
' ================================================================
' SƠ ĐỒ CLASS CHUẨN UML - ỨNG DỤNG BÁN ĐỒNG HỒ E-COMMERCE
' Màu: Đen Trắng | Chuẩn: UML 2.0 | Ngày: 01/12/2025
' ================================================================

' Cấu hình giao diện đen trắng chuẩn UML
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam linetype ortho

skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

' ================================================================
' ĐỊNH NGHĨA CÁC LỚP (CLASS DEFINITIONS)
' ================================================================

class User {
    - id: int
    - email: string
    - pass: string
    - username: string
    - mobile: string
    - role: int
    - loginType: string
    - resetOtp: string
    - status: int
    __
    + login(): boolean
    + register(): boolean
    + resetPassword(): boolean
    + updateProfile(): boolean
    + getOrders(): List
    + getCart(): Cart
}

class Voucher {
    - id: int
    - maVoucher: string
    - tenVoucher: string
    - moTa: string
    - loaiGiam: enum
    - giaTriGiam: decimal
    - giamToiDa: decimal
    - donToiThieu: decimal
    - apDungCho: enum
    - soLuong: int
    - daSuDung: int
    - gioiHanMoiUser: int
    - ngayBatDau: datetime
    - ngayHetHan: datetime
    __
    + isValid(): boolean
    + canUserUse(userId: int): boolean
    + calculateDiscount(amount: decimal): decimal
    + applyVoucher(): boolean
    + getUsageCount(): int
    + getRemainingQuantity(): int
}

class Cart {
    - id: int
    - idUser: int
    - createdAt: datetime
    - updatedAt: datetime
    __
    + getItems(): List<CartItem>
    + getTotal(): decimal
    + clear(): void
}

class CartItem {
    - id: int
    - idCart: int
    - idSanPham: int
    - soLuong: int
    - giaTaiThoiDiem: decimal
    __
    + increaseQty(qty: int): void
    + decreaseQty(qty: int): void
    + getSubtotal(): decimal
}

class SanPhamMoi {
    - id: int
    - tenSanPham: string
    - hinhAnh: string
    - moTa: string
    - giaSanPham: decimal
    - loai: int
    __
    + getDetails(): SanPhamMoiVe
    + updatePrice(newPrice: decimal): boolean
    + updateStock(quantity: int): boolean
    + isAvailable(): boolean
    + getByCategory(categoryId: int): List
    + searchProducts(keyword: string): List
}

class DonHang {
    - id: int
    - idUser: int
    - voucherId: int
    - maVoucher: string
    - giaTriGiam: decimal
    - tongTruocGiam: decimal
    - diaChi: string
    - soDienThoai: string
    - soLuong: int
    - tongTien: string
    - thoiGian: datetime
    - maDonHang: string
    - ngayDat: datetime
    - ngayGiaoDuKien: date
    __
    + createOrder(): boolean
    + calculateTotal(): decimal
    + applyVoucher(voucher: Voucher): boolean
    + updateStatus(status: string): boolean
    + getOrderDetails(): List
    + cancelOrder(): boolean
    + confirmOrder(): boolean
    + getTrackingInfo(): string
}

class ChiTietDonHang {
    - id: int
    - idDonHang: int
    - idSanPham: int
    - soLuong: int
    __
    + calculateSubtotal(): decimal
    + getProduct(): SanPhamMoiVe
    + updateQuantity(qty: int): boolean
    + removeItem(): boolean
}

class VoucherUsage {
    - id: int
    - voucherId: int
    - userId: int
    - donHangId: int
    - maDonHang: string
    - ngaySuDung: timestamp
    __
    + recordUsage(): boolean
    + getUsageHistory(userId: int): List
    + validateUsage(): boolean
    + getUsageCount(voucherId: int): int
}

' ================================================================
' QUAN HỆ GIỮA CÁC LỚP (RELATIONSHIPS)
' ================================================================

' User - Cart: 1 User có 1 Cart
User "1" -- "1" Cart

' Cart - CartItem: 1 Cart chứa nhiều CartItem
Cart "1" -- "*" CartItem

' CartItem - SanPhamMoi: CartItem tham chiếu đến SanPhamMoi
CartItem "*" -- "1" SanPhamMoi

' User - DonHang: 1 User có nhiều DonHang
User "1" -- "*" DonHang

' User - Voucher: 1 User có thể dùng 1 Voucher
User "1" -- "1" Voucher

' DonHang - ChiTietDonHang: 1 DonHang có nhiều ChiTietDonHang
DonHang "1" -- "*" ChiTietDonHang

' ChiTietDonHang - SanPhamMoi: ChiTietDonHang tham chiếu đến SanPhamMoi
ChiTietDonHang "*" -- "1" SanPhamMoi

' DonHang - Voucher: DonHang có thể dùng 0..1 Voucher
DonHang "*" -- "0..1" Voucher

' Voucher - VoucherUsage: 1 Voucher có nhiều VoucherUsage
Voucher "1" -- "*" VoucherUsage

' DonHang - VoucherUsage: 1 DonHang có 1 VoucherUsage
DonHang "1" -- "*" VoucherUsage

@enduml
